<resources>
    <string name="app_name">Поиск банкомата</string>
    <string name="title_detail_fragment">Банкомат</string>
    <string name="title_map_fragment">Навигация</string>
    <string name="title_about_app">О приложении</string>

    <!-- toolbar actions -->
    <string name="action_search">Поиск</string>
    <string name="action_search_hint">Название улицы</string>
    <string name="action_about_app">О приложении</string>
    <string name="action_share_app_link">Рассказать друзьям</string>
    <string name="action_share_atm_detail">Поделиться расположением ATM</string>

    <string name="message_network_off">Включите WiFi или мобильный интернет</string>
    <string name="message_error_undefined">Извините, произошла неопределенная ошибка&#8230;</string>
    <string name="message_error_google_services_default">Ошибка сервисов Google Play</string>
    <string name="message_error_google_services_missing">Для работы с приложением требуются сервисы Google Play, не установленные на вашем телефоне</string>
    <string name="message_error_google_services_update_required">Для работы с приложением необходимо обновить сервисы Google Play</string>
    <string name="message_error_google_services_disabled">Для работы с приложением необходимо включить сервисы Google Play</string>
    <string name="message_update_failed">Ошибка при обновлении</string>
    <string name="message_update_success">Обновление завершено</string>
    <string name="message_update_reset">Обновление прервано</string>
    <string name="message_update_waiting">Подождите окончания обновления</string>
    <string name="message_search_no_items">Ничего не найдено</string>
    <string name="message_need_on_gps">Для более точного поиска включите определение местоположения по GPS</string>
    <string name="message_need_on_location">Для поиска ближайшего банкомата включите определение местоположения</string>
    <string name="message_splash">Ваш помощник в поиске банкомата</string>
    <string name="message_about_app">Приложение позволяет найти ближайший банкомат в любом месте где бы Вы не находились. Используется Ваше текущее местоположение по координатам сети оператора либо GPS приемника.</string>
    <string name="message_share_app_link">Привет! Рекомендую приложение для поиска банкоматов https://goo.gl/l0Ccse</string>
    <string name="message_location_not_desined">Местоположение не определено</string>
    
    <string name="label_kilometers">км</string>
    <string name="label_app_version">Версия</string>
    <string name="label_contact_developer">Написать разработчику</string>
    <string name="label_chooser_share_atm">Поделиться расположением</string>
    <string name="label_chooser_share_app_link">Рекомендовать другу</string>
    <!-- icons -->
    <string name="ic_description_place">Показать на карте</string>
    <string name="ic_description_info">Показать дополнительную информацию</string>
    <string name="ic_bank_description">Наименование банка</string>
    <string name="ic_atm_address">Адрес банкомата</string>
    <string name="ic_atm_worktime">Время работы</string>

    <!-- buttons -->
    <string name="button_text_repeat">Повторить</string>
    <string name="button_settings">Настройки</string>
    <string name="button_goto_map">На карте</string>
    <string name="button_text_update">Обновить</string>
    <string name="button_text_install">Установить</string>

    <!-- images hints -->
    <string name="image_contact_google">Написать в Google+</string>
    <string name="image_contact_linkedin">Написать в Linkedin</string>

    <!-- admob -->
    <string name="admob_banner_id" translatable="false">ca-app-pub-5648227204874443/9373607012</string>
</resources>
