<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share_app_link"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_share_app_link"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about_app"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/action_about_app"
        app:showAsAction="never"
        />
</menu>
