<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <FrameLayout
        android:id="@+id/frame_bank_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_elements_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/ic_bank_description"
            android:src="@drawable/ic_account_balance_grey600_24dp"/>

        <TextView
            android:id="@+id/bank_name"
            style="@style/AtmDetail.TextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:text="ПАО 'БАНК КРЕДИТ ДНЕПР'"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_atm_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_elements_height"
        android:layout_below="@+id/frame_bank_name">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/ic_atm_address"
            android:src="@drawable/ic_place_grey600_24dp"/>

        <TextView
            android:id="@+id/atm_address"
            style="@style/AtmDetail.TextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:text="ул. Столетова, 21, Днепропетровск, Украина"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_worktime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_elements_height"
        android:layout_below="@+id/frame_atm_address">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/ic_atm_address"
            android:src="@drawable/ic_schedule_grey600_24dp"/>

        <TextView
            android:id="@+id/atm_worktime"
            style="@style/AtmDetail.TextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:text="00:00 - 23:59"/>
    </FrameLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_elements_height"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:id="@+id/button_atm_onmap"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/button_goto_map"/>
    </RelativeLayout>


</RelativeLayout>
